--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   "dependencies": {
     "@clerk/nextjs": "^4.23.2",
     "@clerk/themes": "^1.7.5",
+    "@fortawesome/fontawesome-svg-core": "^6.4.2",
+    "@fortawesome/free-solid-svg-icons": "^6.4.2",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@hookform/resolvers": "^3.2.0",
     "@netlify/plugin-nextjs": "^4.40.1",
     "@radix-ui/react-label": "^2.0.2",
@@ -21,6 +24,7 @@
     "@types/react-dom": "^18.2.7",
     "@uploadthing/react": "^5.3.0",
     "autoprefixer": "^10.4.15",
+    "babel-plugin-macros": "^3.1.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "lucide-react": "^0.268.0",
@@ -30,6 +34,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.45.4",
+    "react-icons": "^4.10.1",
     "svix": "^1.8.1",
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "^3.3.3",
